fix: @media 325px & navbar__search_mobile_visible

--- a/css/style.css
+++ b/css/style.css
@@ -1658,9 +1658,6 @@ template {
   .footer-list {
     min-width: 100%;
   }
-}
-
-@media (max-width: 320px) {
   .navbar__search_mobile_visible {
     width: 245px;
   }
