--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -344,12 +344,11 @@
     .footer
         &-list
             min-width: 100%
-@media (max-width: 320px)
     .navbar
         &__search
             &_mobile
                 &_visible
-                    width: 245px                                       
+                    width: 245px                                     
                                       
                                  
 
